// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot mfaCredentials default 1`] = `
<div>
  <div
    class="sc-AxmLO cCElfg"
  >
    <div>
      <div
        class="sc-fzoXzr jzxwMq"
      >
        <div>
          <div
            class="sc-AxirZ sc-AxiKw fAiBCP"
          >
            mfa.email.explain
          </div>
          <form
            class="sc-fzoyAV eLHLnL"
            novalidate=""
          >
            <button
              class="sc-fzqNJr gWXXZS"
              data-testid="submit"
              type="submit"
            >
              mfa.register.email
            </button>
          </form>
        </div>
        <div
          class="sc-AxgMl fOrrlo"
        >
          <span />
        </div>
        <div>
          <div
            class="sc-AxirZ sc-AxiKw fAiBCP"
          >
            mfa.phoneNumber.explain
          </div>
          <form
            class="sc-fzoyAV eLHLnL"
            novalidate=""
          >
            <div
              class="sc-fzplWN ihTKJp"
            >
              <label
                class="sc-fzoLsD ggcsuZ"
                for="phone_number"
              >
                phoneNumber
              </label>
              <input
                autocomplete="tel"
                class="sc-fznyAO eZfilo"
                data-testid="phone_number"
                id="phone_number"
                name="phone_number"
                placeholder="phoneNumber"
                required=""
                type="tel"
                value=""
              />
            </div>
            <button
              class="sc-fzqNJr gWXXZS"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-fzoXzr jzxwMq"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot mfaCredentials no intro 1`] = `
<div>
  <div
    class="sc-AxmLO cCElfg"
  >
    <div>
      <div
        class="sc-fzoXzr jzxwMq"
      >
        <div
          class="sc-AxgMl fOrrlo"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-fzoyAV eLHLnL"
            novalidate=""
          >
            <div
              class="sc-fzplWN ihTKJp"
            >
              <label
                class="sc-fzoLsD ggcsuZ"
                for="phone_number"
              >
                phoneNumber
              </label>
              <input
                autocomplete="tel"
                class="sc-fznyAO eZfilo"
                data-testid="phone_number"
                id="phone_number"
                name="phone_number"
                placeholder="phoneNumber"
                required=""
                type="tel"
                value=""
              />
            </div>
            <button
              class="sc-fzqNJr gWXXZS"
              data-testid="submit"
              type="submit"
            >
              mfa.register.phoneNumber
            </button>
          </form>
        </div>
      </div>
      <div
        class="sc-fzoXzr jzxwMq"
      >
        <div>
          <form
            class="sc-fzoyAV eLHLnL"
            novalidate=""
          >
            <button
              class="sc-fzqNJr gWXXZS"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.email
            </button>
          </form>
        </div>
        <div
          class="sc-AxgMl fOrrlo"
        >
          <span />
        </div>
        <div>
          <form
            class="sc-fzoyAV eLHLnL"
            novalidate=""
          >
            <button
              class="sc-fzqNJr gWXXZS"
              data-testid="submit"
              type="submit"
            >
              mfa.remove.phoneNumber
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;
